--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
 hidapi = "2.6.1"
+strum = { version = "0.26.3", features = ["derive"] }
